# ocr-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMAGE_PREPROCESSING_ENDPOINT_SUMMARY.md  IMPLEMENTATION_TASK_TRACKER.md  Nstda-OCR.postman_collection.json  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_TESTING_SUMMARY.md  README.md  STREAMING_FIX_SUMMARY.md  demonstrate_performance_difference.py  docker-compose.prod.yml  docker-compose.yml  production.env.example  pyproject.toml  pytest.ini  real_image_base64.txt  test-production.env  test_image_base64.txt  tmp.js
app/: __init__.py  logger_config.py  main.py
config/: __init__.py  settings.py
docs/: ENHANCED_LOGGING_GUIDE.md  EXTERNAL_OCR_INTEGRATION.md  IMAGE_SCALING_GUIDE.md  PDF_OCR_GUIDE.md  PDF_PAGE_SELECTION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STATUS_AND_NEXT_STEPS.md  README.md  TESTING.md  TESTING_SUMMARY.md
scripts/: build_and_push.sh  deploy_production.sh  launch_with_timestamp.sh  manage_data_dirs.py  run_deployment_tests.sh  run_tests.py  start_server.py  test_cancellation_fix.py  test_remote.sh  test_streaming_demo.py  test_url_feature.py
test_files/: รายละเอียด ค่าเทอมฤดูร้อน.docx
tests/: README_PERFORMANCE_REPORTING.md  README_REAL_API_TESTING.md  README_REMOTE_TESTING.md  __init__.py  conftest.py  performance_data.db  performance_reporter.py  remote_client.py  remote_test_config.py  test_data_quality.py  test_performance_load.py  test_performance_with_reporting.py  test_real_api_execution.py  test_real_performance.py  test_remote_deployment.py  test_remote_pdf_integration.py  (+3 more)
(+72 files in other folders)
